objects/ssot__Lead__dlm.object
<CustomObject>
    <fields>
        <fullName>cdp_crm_dk1__rel_1697796245597_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_PhoneContactPointId_map_ssot_Id_rel</label>
        <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
        <relationshipLabel>ssot_PhoneContactPointId_map_ssot_Id_rel</relationshipLabel>
        <relationshipName>rel_1697796245597_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cdp_crm_dk1__rel_1697796246210_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_ConvertedToAccountId_map_ssot_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ssot_ConvertedToAccountId_map_ssot_I_rel</relationshipLabel>
        <relationshipName>rel_1697796246210_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cdp_crm_dk1__rel_1697796246606_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_ContactPointEmailId_map_ssot_Id_rel</label>
        <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
        <relationshipLabel>ssot_ContactPointEmailId_map_ssot_Id_rel</relationshipLabel>
        <relationshipName>rel_1697796246606_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactAddressId__c</fullName>
        <label>Contact Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointEmailId__c</fullName>
        <label>Contact Point Email</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConvertedDate__c</fullName>
        <label>Converted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConvertedDt__c</fullName>
        <label>Converted Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ConvertedToAccountContactId__c</fullName>
        <label>Converted To AccountContact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConvertedToAccountId__c</fullName>
        <label>Converted To Account</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConvertedToOpportunityId__c</fullName>
        <label>Converted To Opportunity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryId__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryName__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyId__c</fullName>
        <label>Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailBouncedDate__c</fullName>
        <label>EmailBouncedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EmailBouncedReason__c</fullName>
        <label>EmailBouncedReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeCount__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpressedInterestText__c</fullName>
        <label>Expressed Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaxContactPhoneId__c</fullName>
        <label>Fax Contact Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenderIdentity__c</fullName>
        <label>Gender Identity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeoCodeAccuracy__c</fullName>
        <label>Geo Code Accuracy</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GeoCodeLatitude__c</fullName>
        <label>Geo Code Latitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GeoCodeLongitude__c</fullName>
        <label>Geo Code Longitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GeocodeAccuracyType__c</fullName>
        <label>Geocode Accuracy Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Lead Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryId__c</fullName>
        <label>Industry</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsConverted__c</fullName>
        <label>Is Converted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastActivityDate__c</fullName>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LeadRating__c</fullName>
        <label>Lead Rating</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadScore__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LeadSourceId__c</fullName>
        <label>Lead Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadStatusId__c</fullName>
        <label>Lead Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Lead_PartnerAccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead_PartnerAccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Lead_PartnerAccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Lead_PartnerAccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Lead_PartyId_map_Party_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead_PartyId_map_Party_Id_N_1</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>Lead_PartyId_map_Party_Id_N_1</relationshipLabel>
        <relationshipName>Lead_PartyId_map_Party_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__MobileContactPhoneId__c</fullName>
        <label>Mobile Contact Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartnerAccountId__c</fullName>
        <label>Partner Account</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Lead Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonName__c</fullName>
        <label>Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhoneContactPointId__c</fullName>
        <label>Phone Contact Point</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhotoURL__c</fullName>
        <label>Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostalCodeId__c</fullName>
        <label>Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PotentialValueAmt__c</fullName>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PronounSet__c</fullName>
        <label>Pronoun Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferredByContactId__c</fullName>
        <label>Referred By Contact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferredByUserId__c</fullName>
        <label>Referred By User</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateProvinceId__c</fullName>
        <label>State Province</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateProvinceName__c</fullName>
        <label>State Province Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StreetName__c</fullName>
        <label>Street Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761149977_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_Lead_Converted_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_Lead_Converted_rel</relationshipLabel>
        <relationshipName>rel_1697761149977_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761151876_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_Lead_ConvertedToAccou_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_Lead_ConvertedToAccou_rel</relationshipLabel>
        <relationshipName>rel_1697761151876_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761151949_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_Lead_PartnerAccountId_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_Lead_PartnerAccountId_rel</relationshipLabel>
        <relationshipName>rel_1697761151949_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>